# pao-flip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mgr2obj.py
cc/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  InputGraphicsItem.cpp  TriangleGraphicsItem.cpp  TriangleGraphicsItem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pao/: CMakeLists.txt
pao/inc/: Config.h  Data.h  Definitions.h  Pao.h  Tri.h  cgTypes.h  tools.h
pao/src/: Config.cpp  Data.cpp  Pao.cpp  Tri.cpp  cgTypes.cpp  tools.cpp
pao/src/gml/: BasicInput.cpp  BasicInput.h  GMLGraph.h  README.md
